// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AclAction getAcl is successful 1`] = `
Array [
  Object {
    "type": "GET_ACL",
  },
  Object {
    "data": Object {
      "groups": Array [],
      "users": Array [],
    },
    "type": "GET_ACL_SUCCESS",
  },
]
`;

exports[`AclAction updateAclForGroup is successful 1`] = `
Array [
  Object {
    "type": "UPDATE_GROUP_ACL",
  },
  Object {
    "data": Object {
      "folderId": 1,
    },
    "type": "UPDATE_GROUP_ACL_SUCCESS",
  },
  Object {
    "type": "GET_ACL",
  },
  Object {
    "data": Object {
      "groups": Array [],
      "users": Array [],
    },
    "type": "GET_ACL_SUCCESS",
  },
]
`;

exports[`AclAction updateAclForUser is successful 1`] = `
Array [
  Object {
    "type": "UPDATE_USER_ACL",
  },
  Object {
    "data": Object {
      "folderId": 1,
    },
    "type": "UPDATE_USER_ACL_SUCCESS",
  },
  Object {
    "type": "GET_ACL",
  },
  Object {
    "data": Object {
      "groups": Array [],
      "users": Array [],
    },
    "type": "GET_ACL_SUCCESS",
  },
]
`;
